kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kubeinvaders
  name: kubeinvaders
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: kubeinvaders
  sessionAffinity: None
  type: ClusterIP
